content/boundary/v1.0.x/content/docs/concepts/iam.mdx
---
layout: docs
page_title: Boundary identity and access management (IAM)
description: >-
  Learn how scopes, auth methods, accounts, users, groups, and roles make up Boundary's identity and access management (IAM) system, with example grant strings.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-05-11T10:18:43-04:00
last_modified: 2026-08-11T01:39:38.000Z
# END AUTO GENERATED METADATA
---

# Identity and access management (IAM)

Controlling who can access what gets unwieldy as teams, targets, and
environments grow. Boundary's identity and access management (IAM) system
solves this with six resources that together define authentication and 
granted permissions: scopes, auth methods, accounts, users, groups, and roles.

## Scopes
[Scopes](/boundary/docs/domain-model/scopes) can be considered as containers for resources and permissions. Each scope also has a permissions boundary that is isolated from other scopes on the same level. There are three types of scopes:
- **Global** - The highest-level scope of Boundary where administrators configure and manage Boundary for the entire company.
- **Org (Organization)** - Org scopes are contained in the global scope and are typically used to represent business units, organizations, or departments.
Org scopes can also be used to contain multiple production-level auth methods in separate scopes.
- **Project** - Project scopes are contained in Org scopes and be used to separate different business workflows. For example, projects can be used to represent different teams, products, or environments (test, dev, prod).

## Auth methods
[Auth methods](/boundary/docs/domain-model/auth-methods) are resources that authenticate users to
Boundary. Auth methods can only be contained by the global or Org scopes. Refer to [Configure authentication](/boundary/docs/authentication) to set one up. The available auth methods are:
- [Username/Password](/boundary/docs/authentication/password)
- [OIDC](/boundary/docs/authentication) (OpenID Connect). For a hands-on walkthrough, refer to the [OIDC authentication tutorial](/boundary/tutorials/identity-management/oidc-auth).
- [LDAP](/boundary/docs/authentication/ldap) (Lightweight Directory Access Protocol)

## Accounts
[Accounts](/boundary/docs/domain-model/accounts) are resources that represent an authenticated user from a trusted identity provider through a Boundary auth method. Accounts must belong to an auth method, and can be associated with a single Boundary user. Boundary accounts can belong to the global or Org Scopes.

## Users
[Users](/boundary/docs/domain-model/users) are resources that represent an individual person or entity for the purposes of
access control. A user can contain multiple accounts from multiple auth methods, and can belong to the global or Org Scopes.

## Groups
[Groups](/boundary/docs/domain-model/groups) are resources that represent a collection of users, and can be contained by any
scope. [Managed groups](/boundary/docs/domain-model/managed-groups) are a special kind of group that syncs with the auth
method's identity provider to provide up-to-date information.

## Roles
[Roles](/boundary/docs/domain-model/roles) are resources that contain a collection of
[permissions](/boundary/docs/rbac/assignable-permissions) which are granted to any principal (user or group) from any scope. Roles
can be contained by any scope, and the permissions can be applied to the same scope or any child scope.

## Access management

You can add users to Boundary using the [password](/boundary/docs/authentication/password) auth method or [OIDC](/boundary/docs/authentication)/[LDAP](/boundary/docs/authentication/ldap).

### Configure users - username/password
There are 3 steps to adding new users to Boundary using the password auth method:
1. Choose the **scope** and the **auth method** that the user will use to authenticate to Boundary. If the desired auth method does not exist, you must create a new one.
2. After the auth method is selected, you can create an **account** under the auth method.
3. In the same scope, create a new **user**, and then attach the new account to the new user. The user is now able to authenticate to Boundary.

Refer to [Configure password authentication](/boundary/docs/authentication/password) for step-by-step instructions to create the auth method, account, and user.

### Configure users - OIDC/LDAP
With the OIDC and LDAP auth methods, Boundary uses data from the identity provider to automatically generate accounts and users in the same scope
as the auth method. The accounts and users are only created once the user authenticates to Boundary for the first time.
The same applies to OIDC/LDAP [managed groups](/boundary/docs/rbac/users/managed-groups).

Refer to [Configure OIDC authentication](/boundary/docs/authentication) or [Configure LDAP authentication](/boundary/docs/authentication/ldap) for step-by-step setup instructions, or the [OIDC authentication](/boundary/tutorials/identity-management/oidc-auth) and [OIDC identity provider groups](/boundary/tutorials/identity-management/oidc-idp-groups) tutorials for hands-on walkthroughs.

You can configure the `max_age` in the [OIDC attributes](/boundary/docs/domain-model/auth-methods#oidc-auth-method-attributes) to indicate to the OIDC provider how much time is allowed to pass until a user is challenged to authenticate again.
However, the user will not be prompted to authenticate until the controller's `auth_token_time_to_live` [configuration parameter](/boundary/docs/configuration/controller#auth_token_time_to_live) has expired.
The default value is 7 days.

To configure time to live in HCP Boundary, refer to [Configure authentication time to live](/hcp/docs/boundary/configure-ttl).

## Grant permissions
When setting up access controls for a user, it is important to first consider which scope(s) the user needs access to. Roles give users permission to perform actions through grants strings.
It is recommended to add the user to a group, and then add the group to the role(s), instead of adding the user directly to the role(s). This way, you can manage multiple users at the same time, and it is easier to
change the permissions of the user by adding/removing them from groups. You can manage OIDC/LDAP users and managed groups the same way, directly in the provider.

## IAM examples by persona
Here are a few examples of access management for personas, using this sample scope structure. In this structure, there are 7 scopes overall: 1 global, 2 Orgs, and 4
Projects.

![Diagram showing a 7-scope hierarchy: 1 global scope containing 2 org scopes, each containing 2 project scopes.](/img/iam-example-structure_light.png#light-theme-only)
![Diagram showing a 7-scope hierarchy: 1 global scope containing 2 org scopes, each containing 2 project scopes.](/img/iam-example-structure_dark.png#dark-theme-only)

Each persona requires a role in the listed scopes, with the user or group added as a principal, and the listed grants applied:

| Persona | Scopes | Grants |
|---------|--------|--------|
| Boundary admin | Each of the 7 scopes (role ex. "admin") | `ids=*;type=*;actions=*` |
| Boundary viewer | Each of the 7 scopes (role ex. "viewer") | `ids=*;type=*;actions=read,list` |
| Org_A admin | Org_A, Project_1, Project_2 (role ex. "admin") | `ids=*;type=*;actions=*` |
| Project_1 admin | Project_1 (role ex. "admin") | `ids=*;type=*;actions=*` |
| Project_1 target access | Project_1 (role ex. "target_access") | `ids=*;type=target;actions=list,read,authorize-session`<br />`ids=*;type=session;actions=read:self,cancel:self,list` |

You can use the same roles across “Boundary Admin”, “Org_A Admin”, and “Project_1 Admin” since the scopes and grants are the same. The only difference is
the users/groups that are added to each role.
